Pasta view "atualizada"

--- a/VIEW/cadastroLoja.html
+++ b/VIEW/cadastroLoja.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width-device-width, initial-scale=1">
-        <title>Game Store</title>
+
+        <title>GameStore - Cadastro de Loja</title>
         
         <link rel="stylesheet" href="_css/bootstrap.css">
         <link rel="stylesheet" href="_css/variations.css">
@@ -84,7 +85,7 @@
             <div id="close" class="close" onclick="modalCloseOut()">+</div>
             <form>
                 <p class="text-center">Deseja Sair de Sua Seção?</p>
-                <a href="" class="btn btn-danger">Sim</a>
+                <a href="../CONTROLLER/Outros/Logout.php" class="btn btn-danger">Sim</a>
                 <a href="" class="btn btn-dark" onclick="modalCloseOut()">Cancelar</a>
             </form>
         </div> 
