--- a/VIEW/esqueciMinhaSenha.html
+++ b/VIEW/esqueciMinhaSenha.html
@@ -3,7 +3,9 @@
 
     <head>
         <meta charset="utf-8"/>
-        <title>Site</title>
+
+        <title>GameStore - Esqueci minha senha</title>
+
         <link rel="stylesheet" href="_css/forms.css"/>
         <link rel="stylesheet" href="_css/variations.css"/>
     </head>
@@ -14,9 +16,6 @@
                 <div>Digite seu E-mail</div>
                     <form>
                       <input class="input2" type="email" placeholder="Email"/>   
-
-
-
 
                         <div><button type="submit" class="Button2">Enviar</button></div>
 
