--- a/VIEW/loginErro.html
+++ b/VIEW/loginErro.html
@@ -1,27 +1,33 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
-
     <head>
         <meta charset="utf-8"/>        
         <title>GameStore - Login</title>
         <link rel="stylesheet" href="_css/forms.css"/>
         <link rel="stylesheet" href="_css/variations.css"/>
     </head>   
-    
+
     <body class="bodyDif">
         <div>        
+
+            
+
             <div class="box box1" >               
-                <form action="../CONTROLLER/Transaction/loginTrans.php" method="post">
-                    <h1 class="loginMsg">Login</h1>
+                <form action="../CONTROLLER/Transaction/loginTrans.php" method="POST">
+                    <h1 class="loginMsg">Caixa de erro aqui em herminho;
+
+                            ERRO na senha ou no loginLogin</h1>
 
                     <input name="user_email" class="inputDif" type="email" required autofocus="" placeholder="Usuário ou Email"/>
-                    <input name="user_password" class="inputDif" type="password" required placeholder="Senha"/>
+
+                    <input name="user_password" class="inputDif" type="password" required placeholder="Senha"/>   
 
                     <div><button class="loginButton" type="submit">Login</button>
                     </div>
                     
-                    <a  class="Link_EsqueciSenha" href="esqueciMinhaSenha.html">Esqueci minha senha</a>
-                </form>
+                    <a class="Link_EsqueciSenha" href="esqueciMinhaSenha.html">Esqueci minha senha</a>
+
+                </form> 
             </div>
             </div>
     </body>
