--- a/VIEW/_css/forms.css
+++ b/VIEW/_css/forms.css
@@ -129,7 +129,6 @@ p{
     color: white;
     padding-top: 50px;
     padding-bottom: 50px;
-    margin-top: -52px;
 }
 
 .footer-site2{
@@ -307,7 +306,7 @@ p{
 
 .caixa{
     border: 0.5px solid rgba(0, 0, 0, .3);
-    padding: 30px 30px 45px 30px;
+    padding: 30px;
 }
 
 .tx1{
@@ -333,7 +332,7 @@ p{
 .blocosb{
     margin-right: 280px;
     margin-left: -316px;
-    margin-top: -336px;
+    margin-top: -306px;
     width: 317px;
 }
 
@@ -351,6 +350,6 @@ p{
 }
 
 .add{
-    margin-top: 288px;
+    margin-top: 261px;
     margin-left: -104px;
 }
