--- a/VIEW/cadastroCliente.html
+++ b/VIEW/cadastroCliente.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width-device-width, initial-scale=1">
-    <title>Game Store</title>
+    <title>GameStore - Cadastro de Cliente</title>
 
     <link rel="stylesheet" href="_css/bootstrap.css">
     <link rel="stylesheet" href="_css/variations.css">
